--- a/index.html
+++ b/index.html
@@ -162,36 +162,28 @@
                   <li class="our-team-info-svg">
                     <a class="our-team-link" href="">
                       <svg class="team-svg" width="16" height="16">
-                        <use
-                          href="./images/icons.svg#icon-instagram-2"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="our-team-info-svg">
                     <a class="our-team-link" href="">
                       <svg class="team-svg" width="16" height="16">
-                        <use
-                          href="./images/icons.svg#icon-twitter-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="our-team-info-svg">
                     <a class="our-team-link" href="">
                       <svg class="team-svg" width="16" height="16">
-                        <use
-                          href="./images/icons.svg#icon-facebook-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="our-team-info-svg">
                     <a class="our-team-link" href="">
                       <svg class="team-svg" width="16" height="16">
-                        <use
-                          href="./images/icons.svg#icon-linkedin-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -207,36 +199,28 @@
                   <li class="our-team-info-svg">
                     <a class="our-team-link" href="">
                       <svg class="team-svg" width="16" height="16">
-                        <use
-                          href="./images/icons.svg#icon-instagram-2"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="our-team-info-svg">
                     <a class="our-team-link" href="">
                       <svg class="team-svg" width="16" height="16">
-                        <use
-                          href="./images/icons.svg#icon-twitter-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="our-team-info-svg">
                     <a class="our-team-link" href="">
                       <svg class="team-svg" width="16" height="16">
-                        <use
-                          href="./images/icons.svg#icon-facebook-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="our-team-info-svg">
                     <a class="our-team-link" href="">
                       <svg class="team-svg" width="16" height="16">
-                        <use
-                          href="./images/icons.svg#icon-linkedin-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -252,36 +236,28 @@
                   <li class="our-team-info-svg">
                     <a class="our-team-link" href="">
                       <svg class="team-svg" width="16" height="16">
-                        <use
-                          href="./images/icons.svg#icon-instagram-2"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="our-team-info-svg">
                     <a class="our-team-link" href="">
                       <svg class="team-svg" width="16" height="16">
-                        <use
-                          href="./images/icons.svg#icon-twitter-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="our-team-info-svg">
                     <a class="our-team-link" href="">
                       <svg class="team-svg" width="16" height="16">
-                        <use
-                          href="./images/icons.svg#icon-facebook-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="our-team-info-svg">
                     <a class="our-team-link" href="">
                       <svg class="team-svg" width="16" height="16">
-                        <use
-                          href="./images/icons.svg#icon-linkedin-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -297,36 +273,28 @@
                   <li class="our-team-info-svg">
                     <a class="our-team-link" href="">
                       <svg class="team-svg" width="16" height="16">
-                        <use
-                          href="./images/icons.svg#icon-instagram-2"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="our-team-info-svg">
                     <a class="our-team-link" href="">
                       <svg class="team-svg" width="16" height="16">
-                        <use
-                          href="./images/icons.svg#icon-twitter-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="our-team-info-svg">
                     <a class="our-team-link" href="">
                       <svg class="team-svg" width="16" height="16">
-                        <use
-                          href="./images/icons.svg#icon-facebook-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="our-team-info-svg">
                     <a class="our-team-link" href="">
                       <svg class="team-svg" width="16" height="16">
-                        <use
-                          href="./images/icons.svg#icon-linkedin-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -339,7 +307,7 @@
 
       <section class="customers-info">
         <div class="container">
-          <h2 class="customers-title">customers</h2>
+          <h2 class="customers-title">Customers</h2>
           <ul class="customers-list list">
             <li class="customers-item">
               <a href="" class="customers-link">
@@ -388,8 +356,6 @@
       </section>
     </main>
 
-
-
     <footer class="footer">
       <div class="container footer-container">
         <div class="footer-section-one">
@@ -406,34 +372,30 @@
           <ul class="footer-section-two-list list">
             <li class="footer-section-two-item">
               <a href="" class="footer-section-two-link">
-
-              <svg class="footer-section-two-icon" width="24" height="24">
-                <use href="./images/icons.svg#icon-instagram-2"></use>
-              </svg>
+                <svg class="footer-section-two-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram-2"></use>
+                </svg>
               </a>
             </li>
             <li class="footer-section-two-item">
               <a href="" class="footer-section-two-link">
-
-              <svg class="footer-section-two-icon" width="24" height="24">
-                <use href="./images/icons.svg#icon-twitter-1"></use>
-              </svg>
+                <svg class="footer-section-two-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter-1"></use>
+                </svg>
               </a>
             </li>
             <li class="footer-section-two-item">
               <a href="" class="footer-section-two-link">
-
-              <svg class="footer-section-two-icon" width="24" height="24">
-                <use href="./images/icons.svg#icon-facebook-1"></use>
-              </svg>
+                <svg class="footer-section-two-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook-1"></use>
+                </svg>
               </a>
             </li>
             <li class="footer-section-two-item">
               <a href="" class="footer-section-two-link">
-
-              <svg class="footer-section-two-icon" width="24" height="24">
-                <use href="./images/icons.svg#icon-linkedin-1"></use>
-              </svg>
+                <svg class="footer-section-two-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin-1"></use>
+                </svg>
               </a>
             </li>
           </ul>
@@ -443,11 +405,9 @@
 
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
-        <button class="modal-btn" data-modal-close>
+        <button type="button" class="modal-btn" data-modal-close>
           <svg class="modal-svg" width="8" height="8">
-            <use
-              href="./images/icons.svg#icon-close-black-18dp-2-1"
-            ></use>
+            <use href="./images/icons.svg#icon-close-black-18dp-2-1"></use>
           </svg>
         </button>
       </div>
