--- a/portfolio.html
+++ b/portfolio.html
@@ -269,7 +269,7 @@
 
     <footer class="footer">
       <div class="container footer-container">
-        <div class="footer-section1">
+        <div class="footer-section-one">
           <a class="link logo footer-logo" href="./index.html"
             >Web<span class="footer-logo-text">Studio</span>
           </a>
@@ -278,28 +278,36 @@
             digital marketing & growth solutions.
           </p>
         </div>
-        <div class="footer-section2">
-          <p class="footer-section2-title">Social Media</p>
-          <ul class="footer-section2-list list">
-            <li class="footer-section2-item">
-              <svg class="footer-section2-icon" width="24" height="24">
-                <use href="./images/icons.svg#icon-instagram-2"></use>
-              </svg>
+        <div class="footer-section-two">
+          <p class="footer-section-two-title">Social media</p>
+          <ul class="footer-section-two-list list">
+            <li class="footer-section-two-item">
+              <a href="" class="footer-section-two-link">
+                <svg class="footer-section-two-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram-2"></use>
+                </svg>
+              </a>
             </li>
-            <li class="footer-section2-item">
-              <svg class="footer-section2-icon" width="24" height="24">
-                <use href="./images/icons.svg#icon-twitter-1"></use>
-              </svg>
+            <li class="footer-section-two-item">
+              <a href="" class="footer-section-two-link">
+                <svg class="footer-section-two-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter-1"></use>
+                </svg>
+              </a>
             </li>
-            <li class="footer-section2-item">
-              <svg class="footer-section2-icon" width="24" height="24">
-                <use href="./images/icons.svg#icon-facebook-1"></use>
-              </svg>
+            <li class="footer-section-two-item">
+              <a href="" class="footer-section-two-link">
+                <svg class="footer-section-two-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook-1"></use>
+                </svg>
+              </a>
             </li>
-            <li class="footer-section2-item">
-              <svg class="footer-section2-icon" width="24" height="24">
-                <use href="./images/icons.svg#icon-linkedin-1"></use>
-              </svg>
+            <li class="footer-section-two-item">
+              <a href="" class="footer-section-two-link">
+                <svg class="footer-section-two-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin-1"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
